--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 version: '3'
 
 services:
-
   app:
     build: ./
     image: typescript-docker
-    restart: always
+    expose:
+      - '3000'
     ports:
       - '3000:3000'
-
-#   app_watcher:
-#     build: ./
-#     image: typescript-docker
-#     depends_on:
-#       - app
-#     restart: always
+    environment:
+      PORT: 3000
+      BUILD: PRODUCTION
+    volumes:
+      - ./src:/home/app/src_live
