dev in single line

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         # BUILD=DEBUG
         # export $BUILD
         run: |
+          export BUILD="DEV"
           docker-compose up --build
 
       - name: Deploy to GitHub pages branch
