--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,7 @@ jobs:
 
       - name: Build web assets
         # if: startsWith(github.event.ref, 'refs/tags')
-        # uses: ./build/
-        # BUILD=DEBUG
-        # export $BUILD
-        run: |
-          BUILD=DEV docker-compose up --build
+        run: docker-compose up --build
 
       - name: Deploy to GitHub pages branch
         # if: startsWith(github.event.ref, 'refs/tags')
