--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
+      # - name: Create empty env file
+      #   run: touch
+
       - name: Build web assets
         # if: startsWith(github.event.ref, 'refs/tags')
         run: docker-compose up --build
