--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
 
       - name: Build web assets
         # if: startsWith(github.event.ref, 'refs/tags')
-        run: docker-compose up --build
+        run: |
+          printenv
+          docker-compose up --build
         env:
           BUILD: PROD
 
