--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - '3000'
     ports:
       - '3000:3000'
+    environment:
+      - PORT=3000
     env_file:
       - .env
     volumes:
