--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "dependencies": {
         "typescript": "^4.3.5",
-        "browserify": "^17.0.0"
+        "browserify": "^17.0.0",
+        "combine-html": "0.0.2"
     },
     "devDependencies": {
         "watchify": "^4.0.0",
