--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "private": true,
     "dependencies": {
         "typescript": "^4.3.5",
-        "browserify": "^17.0.0",
-        "combine-html": "0.0.2"
+        "ts-loader": "^9.2.3",
+        "webpack": "^5.45.1",
+        "webpack-cli": "^4.7.2",
+        "combine-html": "^0.0.2"
     },
     "devDependencies": {
-        "watchify": "^4.0.0",
-        "browser-sync": "^2.27.4"
+        "webpack-dev-server": "^3.11.2"
+    },
+    "scripts": {
+        "build": "npx webpack --config webpack.config.js",
+        "dev": "npx webpack serve --config webpack.config.js"
     },
     "license": "MIT"
 }
