--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "module": "amd",
-        "target": "es2015",
+        "module": "es6",
+        "target": "es5",
+        "esModuleInterop": true,
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": false,
-        "outFile": "dist/temp.js"
+        "outDir": "temp/ts"
     },
     "include": ["src/ts/**/*"]
 }
