--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
     "description": "Browser Based Serial Monitor/Plotter that doesn't suck!",
     "private": true,
     "dependencies": {
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "css-loader": "^6.2.0",
+        "file-loader": "^6.2.0",
+        "html-loader": "^2.1.2",
+        "html-webpack-plugin": "^5.3.2",
+        "mini-css-extract-plugin": "^2.1.0",
+        "optimize-css-assets-webpack-plugin": "^6.0.1",
+        "sass-loader": "^12.1.0",
+        "style-loader": "^3.2.1",
         "typescript": "^4.3.5",
         "ts-loader": "^9.2.3",
         "webpack": "^5.45.1",
         "webpack-cli": "^4.7.2",
-        "combine-html": "^0.0.2"
+        "webpack-merge": "^5.8.0"
     },
     "devDependencies": {
         "webpack-dev-server": "^3.11.2"
     },
     "scripts": {
-        "build": "npx webpack --config webpack.config.js",
-        "dev": "npx webpack serve --config webpack.config.js"
+        "build": "npx webpack --config webpack.prod.js",
+        "start": "npx webpack-dev-server --config webpack.dev.js"
     },
     "license": "MIT"
 }
