--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": false,
-        "outDir": "temp/ts"
+        "sourceMap": false
     },
-    "include": ["src/ts/**/*"]
+    "include": ["src/ts/**/*", "src/index.ts", "src/components"]
 }
