--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           cd main
           docker-compose up --build
+          cd ../
 
       - name: Copy dist files across
         if: startsWith(github.event.ref, 'refs/tags')
@@ -30,6 +31,7 @@ jobs:
       - name: Deploy to GitHub pages branch
         if: startsWith(github.event.ref, 'refs/tags')
         run: |
+          cd gh-pages
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           HASH=$(git -C main rev-parse --short HEAD)
