--- a/package.json
+++ b/package.json
@@ -1,31 +1,45 @@
 {
-    "name": "plotty",
-    "version": "0.1.0",
-    "description": "Browser Based Serial Monitor/Plotter that doesn't suck!",
-    "private": true,
-    "dependencies": {
-        "bulma": "^0.9.3"
-    },
-    "devDependencies": {
-        "clean-webpack-plugin": "^4.0.0-alpha.0",
-        "css-loader": "^6.2.0",
-        "file-loader": "^6.2.0",
-        "html-loader": "^2.1.2",
-        "html-webpack-plugin": "^5.3.2",
-        "mini-css-extract-plugin": "^2.1.0",
-        "node-sass": "^6.0.1",
-        "sass-loader": "^12.1.0",
-        "style-loader": "^3.2.1",
-        "typescript": "^4.3.5",
-        "ts-loader": "^9.2.3",
-        "webpack": "^5.45.1",
-        "webpack-cli": "^4.7.2",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.8.0"
-    },
-    "scripts": {
-        "build": "npx webpack --config webpack.prod.js",
-        "start": "npx webpack serve --config webpack.dev.js"
-    },
-    "license": "MIT"
+  "name": "noflo-svelte",
+  "version": "1.0.0",
+  "devDependencies": {
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/node": "^14.11.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^1.3.4",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "svelte": "^3.31.2",
+    "svelte-check": "^1.0.46",
+    "svelte-loader": "^3.0.0",
+    "svelte-preprocess": "^4.3.0",
+    "ts-loader": "^8.0.4",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.3",
+    "webpack": "^5.16.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.3.0"
+  },
+  "scripts": {
+    "build": "npx webpack --config webpack.prod.js",
+    "dev": "npx webpack serve --config webpack.dev.js",
+    "validate": "svelte-check"
+  },
+  "dependencies": {
+    "@fontsource/comfortaa": "^4.5.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "bulma": "^0.9.3",
+    "react": "^15.7.0",
+    "react-dom": "^15.7.0",
+    "svelte-awesome": "^2.4.2",
+    "the-graph": "^0.13.1"
+  }
 }
