--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,14 +46,17 @@ jobs:
           npm run build
           cd ../
 
+      - name: Clean gh-pages area
+        if: startsWith(github.event.ref, 'refs/tags')
+          run: |
+            rm -rf gh-pages/*
+            touch ./gh-pages/.nojekyll
+            echo 'plotty.bojit.org' >gh-pages/CNAME
+
+
       - name: Copy dist files across
         if: startsWith(github.event.ref, 'refs/tags')
-        run: |
-          cd gh-pages
-          rm -rf -v !("CNAME"|".nojekyll")
-          cd ../
-          cp -r main/dist/. gh-pages/
-          ls -al gh-pages
+        run: cp -r main/dist/. gh-pages/
 
       - name: Deploy to GitHub pages branch
         if: startsWith(github.event.ref, 'refs/tags')
