Working IndexDB with updating Svelte stores

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bulma": "^0.9.3",
+    "localforage": "^1.10.0",
     "mark.js": "^8.11.1",
     "react": "^15.7.0",
     "react-dom": "^15.7.0",
