Modify action to pull full tag history

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           ref: main
           path: main
+          fetch-depth: 0
 
       - name: Checkout gh-pages branch
         uses: actions/checkout@v2
