--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.3.4",
+    "noflo-component-loader": "^0.4.1",
+    "path-browserify": "^1.0.1",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "svelte": "^3.31.2",
@@ -40,6 +42,7 @@
     "bulma": "^0.9.3",
     "localforage": "^1.10.0",
     "mark.js": "^8.11.1",
+    "noflo": "^1.4.3",
     "react": "^15.7.0",
     "react-dom": "^15.7.0",
     "simplebar": "^5.3.6",
