import works, but need some way to resolve noflo dependency at runtime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"esModuleInterop": true,
+		"module": "esnext",
 		"baseUrl": "./",
 		"paths": {
 			"src/*": ["src/*"]
