--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "react-dom": "^15.7.0",
     "simplebar": "^5.3.6",
     "svelte-awesome": "^2.4.2",
-    "the-graph": "github:BOJIT/the-graph"
+    "the-graph": "github:BOJIT/the-graph#1.0.1"
   }
 }
