--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bulma": "^0.9.3",
     "klayjs": "^0.2.1",
-    "klayjs-noflo-npm": "^0.3.1",
     "localforage": "^1.10.0",
     "mark.js": "^8.11.1",
     "noflo": "^1.4.3",
@@ -49,6 +48,6 @@
     "react-dom": "^17.0.2",
     "simplebar": "^5.3.6",
     "svelte-awesome": "^2.4.2",
-    "the-graph": "github:BOJIT/the-graph#1.0.1"
+    "noflo-svelte": "github:BOJIT/noflo-svelte#1.0.0"
   }
 }
