--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "simplebar": "^5.3.6",
-    "svelte-awesome": "^2.4.2"
+    "svelte-awesome": "^2.4.2",
+    "xterm": "^4.16.0",
+    "xterm-addon-fit": "^0.5.0"
   }
 }
