--- a/package.json
+++ b/package.json
@@ -1,56 +1,27 @@
 {
   "name": "plotty",
-  "version": "0.0.0",
-  "devDependencies": {
-    "@tsconfig/svelte": "^1.0.10",
-    "@types/node": "^14.11.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^1.3.4",
-    "noflo-component-loader": "^0.4.1",
-    "path-browserify": "^1.0.1",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "svelte": "^3.31.2",
-    "svelte-check": "^1.0.46",
-    "svelte-loader": "^3.0.0",
-    "svelte-preprocess": "^4.3.0",
-    "ts-loader": "^8.0.4",
-    "tslib": "^2.0.1",
-    "typescript": "^4.0.3",
-    "webpack": "^5.16.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0",
-    "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^6.3.0"
-  },
+  "private": true,
+  "version": "0.2.1",
   "scripts": {
-    "build": "npx webpack --config webpack.prod.js",
-    "dev": "npx webpack serve --config webpack.dev.js",
-    "validate": "svelte-check"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "prepare": "svelte-kit sync",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "next",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.10.1",
+    "tslib": "^2.3.1",
+    "typescript": "~4.6.2"
+  },
+  "type": "module",
   "dependencies": {
-    "@fontsource/comfortaa": "^4.5.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "bulma": "^0.9.3",
-    "klayjs": "^0.2.1",
-    "localforage": "^1.10.0",
-    "mark.js": "^8.11.1",
-    "noflo": "^1.4.3",
-    "noflo-svelte": "github:BOJIT/noflo-svelte#1.0.0",
-    "prismjs": "^1.26.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "simplebar": "^5.3.6",
-    "svelte-awesome": "^2.4.2",
-    "xterm": "^4.16.0",
-    "xterm-addon-fit": "^0.5.0"
+    "@bojit/svelte-components": "^0.2.0"
   }
 }
