--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,3 @@
 {
-	"extends": "@tsconfig/svelte/tsconfig.json",
-	"include": ["src/**/*", "src/node_modules/**/*"],
-	"exclude": ["node_modules/*", "__sapper__/*", "static/*"],
-	"compilerOptions": {
-		"allowJs": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"baseUrl": "./",
-		"paths": {
-			"src/*": ["src/*"]
-		}
-	}
+	"extends": "./.svelte-kit/tsconfig.json"
 }
