--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@bojit/svelte-components": "^1.3.2"
+		"@bojit/svelte-components": "^1.4.0",
+		"localforage": "^1.10.0"
 	}
 }
