--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"type": "module",
 	"dependencies": {
 		"@bojit/svelte-components": "^1.4.0",
+		"fbp-graph": "^0.7.0",
 		"localforage": "^1.10.0"
 	}
 }
