--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 	"type": "module",
 	"dependencies": {
 		"@bojit/svelte-components": "^1.4.0",
+		"events": "^3.3.0",
 		"fbp-graph": "^0.7.0",
-		"localforage": "^1.10.0"
+		"localforage": "^1.10.0",
+		"tv4": "^1.3.0"
 	}
 }
