--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"git-rev-sync": "^3.0.2",
 		"mdsvex": "^0.10.6",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
