--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.0",
+		"@sveltejs/adapter-cloudflare": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"git-rev-sync": "^3.0.2",
 		"mdsvex": "^0.10.6",
@@ -27,8 +27,9 @@
 		"@fontsource/gloria-hallelujah": "^4.5.9",
 		"@fontsource/nunito": "^4.5.12",
 		"@fontsource/syne-mono": "^4.5.8",
+		"clone": "^2.1.2",
 		"events": "^3.3.0",
-		"fbp-graph": "^0.7.0",
+		"fbp": "^1.8.0",
 		"localforage": "^1.10.0",
 		"tv4": "^1.3.0"
 	}
