--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ node_modules
 /package
 .env
 .env.*
-!.env.example
+!.env.development
+!.env.production
+!.env.staging
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
