Add basic status bar

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@bojit/svelte-components": "^1.4.4",
 		"@fontsource/gloria-hallelujah": "^4.5.9",
+		"@fontsource/jetbrains-mono": "^4.5.12",
 		"@fontsource/nunito": "^4.5.12",
 		"@fontsource/syne-mono": "^4.5.8",
 		"clone": "^2.1.2",
