--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@bojit/noflo-svelte": "^2.1.1",
 		"@bojit/svelte-components": "^1.4.4",
 		"@fontsource/gloria-hallelujah": "^4.5.9",
 		"@fontsource/jetbrains-mono": "^4.5.12",
 		"@fontsource/nunito": "^4.5.12",
 		"@fontsource/syne-mono": "^4.5.8",
-		"clone": "^2.1.2",
-		"events": "^3.3.0",
-		"fbp": "^1.8.0",
-		"localforage": "^1.10.0",
-		"tv4": "^1.3.0"
+		"localforage": "^1.10.0"
 	}
 }
