--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-	"name": "plotty",
-	"version": "0.4.0",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"build-staging": "vite build --mode staging",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-cloudflare": "^2.0.1",
-		"@sveltejs/kit": "^1.5.0",
-		"git-rev-sync": "^3.0.2",
-		"mdsvex": "^0.10.6",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@bojit/noflo-svelte": "^2.1.1",
-		"@bojit/svelte-components": "^1.4.4",
-		"@fontsource/gloria-hallelujah": "^4.5.9",
-		"@fontsource/jetbrains-mono": "^4.5.12",
-		"@fontsource/nunito": "^4.5.12",
-		"@fontsource/syne-mono": "^4.5.8",
-		"localforage": "^1.10.0"
-	}
+    "name": "plotty",
+    "version": "0.4.0",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "build-staging": "vite build --mode staging",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^2.0.0",
+        "@sveltejs/adapter-cloudflare": "^2.0.1",
+        "@sveltejs/kit": "^1.5.0",
+        "git-rev-sync": "^3.0.2",
+        "mdsvex": "^0.10.6",
+        "svelte": "^3.54.0",
+        "svelte-check": "^3.0.1",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.0"
+    },
+    "type": "module",
+    "dependencies": {
+        "@bojit/svelte-components": "^1.4.4",
+        "@fontsource/gloria-hallelujah": "^4.5.9",
+        "@fontsource/jetbrains-mono": "^4.5.12",
+        "@fontsource/nunito": "^4.5.12",
+        "@fontsource/syne-mono": "^4.5.8",
+        "localforage": "^1.10.0",
+        "svelvet": "^7.0.48"
+    }
 }
