Fix overflow issue + more styling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
     "editor.fontFamily": "'JetBrains Mono', Consolas, 'Courier New', monospace",
     "editor.fontSize": 13,
     "editor.fontLigatures": true,
+    "editor.formatOnSave": true,
     "editor.insertSpaces": true,
     "editor.renderWhitespace": "all",
     "editor.rulers": [80],
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
     "git.enabled": false,
+    "[svelte]": {"editor.defaultFormatter": "svelte.svelte-vscode"},
     "workbench.colorTheme": "midnight blue",
     "workbench.iconTheme": "vscode-icons",
     "workbench.tree.indent": 16,
