--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@fontsource/syne-mono": "^4.5.8",
         "events": "^3.3.0",
         "localforage": "^1.10.0",
+        "noflo": "^1.4.3",
         "svelvet": "^8.0.0"
     }
 }
