Change PWA orientation field

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,6 +2,7 @@
     "theme_color": "#021312",
     "background_color": "#021312",
     "display": "standalone",
+    "orientation": "landscape-primary",
     "scope": "/",
     "start_url": "/",
     "name": "ploTTY",
