--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "localforage": "^1.10.0",
         "noflo": "^1.4.3",
         "svelte-writable-derived": "^3.1.0",
-        "svelvet": "^8.0.3"
+        "svelvet": "^8.0.3",
+        "webgl-plot": "^0.7.0",
+        "xterm": "^5.2.1"
     }
 }
