--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "svelte-writable-derived": "^3.1.0",
         "svelvet": "^8.0.3",
         "webgl-plot": "^0.7.0",
-        "xterm": "^5.2.1"
+        "xterm": "^5.2.1",
+        "xterm-addon-fit": "^0.7.0"
     }
 }
