--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@fontsource/nunito": "^4.5.12",
         "@fontsource/syne-mono": "^4.5.8",
         "events": "^3.3.0",
+        "get-function-params": "^2.0.7",
         "localforage": "^1.10.0",
         "svelte-writable-derived": "^3.1.0",
         "svelvet": "^8.0.8",
