--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "get-function-params": "^2.0.7",
         "localforage": "^1.10.0",
         "svelte-writable-derived": "^3.1.0",
-        "svelvet": "^8.0.8",
+        "svelvet": "github:BOJIT/Svelvet#temp/expose-utils",
         "webgl-plot": "^0.7.0",
         "xterm": "^5.2.1",
         "xterm-addon-fit": "^0.7.0",
