--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "plotty",
-    "version": "1.0.1",
+    "version": "1.1.0",
     "private": true,
     "scripts": {
         "dev": "vite dev",
@@ -29,6 +29,7 @@
         "@fontsource/jetbrains-mono": "^4.5.12",
         "@fontsource/nunito": "^4.5.12",
         "@fontsource/syne-mono": "^4.5.8",
+        "@xyflow/svelte": "^0.0.29",
         "events": "^3.3.0",
         "get-function-params": "^2.0.7",
         "localforage": "^1.10.0",
